<resources>
    <string name="app_name">Green Medic User</string>
    <string name="full_name">Full Name</string>
    <string name="appicon">appicon</string>
    <string name="password">Password</string>
    <string name="licence_no">Licence no</string>
    <string name="user_name">Username</string>
    <string name="address">Address</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="email">Email</string>
    <string name="_0_0_0_0">0 0 0 0 0 0</string>
    <string name="enter_4_digit_code_sent_to_you">Enter 6 digit code sent to you</string>
    <string name="select_user_type">Select user type</string>
    <string name="pharmacy_store">Pharmacy Store</string>
    <string name="user">User</string>
    <string name="title_activity_pharm_main">PharmMainActivity</string>
    <string name="title_activity_main">Green Medic</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_medicine">Search Medicine</string>
    <string name="total">Total + Delivery:</string>
    <string name="_00000">0000</string>
    <string name="select_pharmacy">Find Pharmacy</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="ordered_medicine_list">Ordered Medicine List</string>
    <string name="title_activity_pending_order">Pending Orders</string>
    <string name="create_order">Create Order</string>
    <string name="google_maps_api">AIzaSyCf0CbOKNoyiAFx-NsnJHw_ppWqtwKvW4I</string>
    <string name="title_activity_user_maps">Green Medic</string>
    <string name="search_pharmacy">Search Pharmacy</string>
    <string name="route_length">Route Length</string>
    <string name="locate">locate</string>
    <string name="order_history">Order History</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="useremail">useremail</string>
    <string name="find_pharmacy">Nearby Pharmacy</string>
    <string name="add_medicine">ADD Medicine</string>
    <string name="onlytotal">Total</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="rating">3.5</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="quantity">Quantity</string>
    <string name="user_phone">User Phone</string>
    <string name="_8801823456789">+8801823456789</string>

</resources>
