<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/order_history" />

        <item
            android:id="@+id/pending_order"
            android:icon="@drawable/pending_order"
            android:title="@string/title_activity_pending_order" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/ic_help"
            android:title="Support"/>

        <item
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:icon="@drawable/signout"
            android:title="@string/sign_out" />

    </group>
</menu>