<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/appicon"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useremail"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:numStars="5"
            android:padding="5dp"
            android:rating="3.5"
            android:stepSize=".5" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/rating"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>